<resources>
    <string name="app_name">Adaptive Math</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="math_solver">Adaptive Math Learning</string>
    <string name="addition">Exercise 1</string>
    <string name="subtraction">Exercise 2</string>
    <string name="multiplication">Exercise 3</string>
    <string name="division">Exercise 4</string>
    <string name="lcm">Exercise 5</string>
<!--    <string name="hcf">Exercise 6</string>-->
    <string name="quadratic_equations">Exercise 6</string>
    <string name="solution">Solution</string>
    <string name="question">Question :</string>
    <string name="_24_4">24*4</string>
    <string name="step">Step :</string>
    <string name="_0">0</string>
    <string name="multiply_first_item_with_second">Multiply first item with second</string>
    <string name="_24">24</string>
    <string name="_4">4</string>
    <string name="multiply">*</string>

    <string name="btn_device">Device</string>
    <string name="btn_cloud">Cloud</string>
    <string name="action_gallery">Gallery</string>
    <string name="action_camera">Camera</string>

    <string name="confirm_storage">This app need to access files on your device.</string>
    <string name="confirm_camera">This app need to access camera and files on your device.</string>
    <string name="error_not_found">No text found</string>
    <string name="mix">Exercise 7</string>
    <string name="start">Start</string>

    <string name="appIDWolf">5668XV-H686HUWJH5</string>
    <string name="two_plus_two">2+2</string>
    <string name="search">Search</string>
    <string name="next"><![CDATA[Next ->]]></string>
</resources>